--- a/index.html
+++ b/index.html
@@ -1,1 +1,229 @@
-<h1>Hello World</h1>
+# Ramayana Skit
+* **Narrator** - Ram is short term memory loss patient.
+
+# Scene 1- 
+**Dashratha ka Ghar**: *Dashratha, the CEO of Ayodhya Pvt.Ltd. is looking into the mirror and singing a song-“Kyu Aajkal neend kam khwab jada hai” and Kaikayi is busy chatting with her friends on Whatsapp.*
+
+**Dashratha**- *Hey Babes! Mei soch raha hun retirement leke GOA chale jaun aur ram ko CEO of Ayodhya Pvt.Ltd. bana dun.*
+
+*Kaikayi totally shocked!!!*
+
+**Kaikayi** - *Lagta hai sathiya gaya hai buddha, glass hath se uthti nhi aur chikut ko GOA jana h.*
+
+**Dashratha**- *Kuch bola tumne dear!*
+
+**Kaikayi** - *mujhe apne dono wachan maangne hai jo tumne diye the.*
+
+**Dashratha**- *han han bolo kya chaiye waise bhi amazon pe big billion day chal raha hai, Iphone x order kar dun*
+
+**Kaikayi** - *Apne pehle lugayi ke bete ram ko jungle bhej aur hamre bete ko raja bana!*
+
+Background song - "tadap tadap ke iss dil se aah nikalti rahi"
+
+**Ram and Dashratha talk**: *Ram tumhe jungle jana hoga.*
+
+**Ram** - *Hum jungle kahen jaye, wachan do tum apni lugayi ko aur jungle jaye hamri lugayi, baap ho yaa jallad.*
+
+# Scene 2-
+## Jungle Scene.
+
+**Ram** - _kal se muh fula kr ku baitha hai bey, ka dikkat hai_
+
+**Laxman** - _Apna to biwi ke saath jungle mei mangle kar rahe ho aur hum baithe hai gomti ke kinare tinder ke sahare,
+dukhi naa ho to kaa kare naache._
+
+Suddenly Surpanakha enters - **song** - "Munni badnaam hui darling tere liye!" 
+
+**Surpanakha** - *Hey Dude! I like you. Do you have five minutes for me? Let’s go out for a coffee or something. What say?*
+
+**Surpanakha** - *waise bhi dekhne se jobless lagte ho, ku naa mujh jaisi hasina ke saath shaam hasin karo!*
+
+Laxman cutting nose of Surpanakha.
+
+**Ram** - *Abey! ye kya kiya gadhe, pehle baar koi hasina mili thi 2 days 3 night package wali.*
+
+**Laxman** - *Bahut sahi chacha, lugayi bhi tumhri aur hasina bhi. Hum to jungle mei mangira bajane aaye hai*
+
+# Scene 3-
+## Sita Apaharan.
+
+Ravana enters in the avtar of a Sadhu.
+
+**Ravana** - Bhiksham Dehi! Burgur- pizza bhi chalega beti!!
+
+**Sita** - Dude! I can’t cross this line.
+
+**Ravana** - *Ayegi kaise nhi, Script mei likha hai*.
+
+**Sita** - *Script kya tere baap ne likhi hai.*
+
+**Ravana** - *Admin committee ne likhi hai.*
+
+**Sita** - *Ohhhho, tab to aana padega snacks ka sawal hai!*
+
+Background song - "Dil wale dulhaniya le jayenge song"
+
+# Scene 4-
+
+Ram and Laxman walking together enter the scene
+
+**Ram** - *Radhe Radhe!*
+
+**Laxman** - *Abey short term, radha nhi sita*
+
+**Ram** - *Sita kaun hai, duryodhan*
+
+**Laxman** - *Arey sita teri patni, mei duryodhan nhi laxman hun*
+
+**Ram** - *Laxman teri bhabhi dikh nhi rahi , kahan gyi hogi??*
+
+**Laxman** - *Arey bhaiya, Big Bazaar mein 50% off...waheen shopping karne gayee hongi! Mobile mein call karke kyun nahin dekhte?*
+
+**Ram** - *Switch Off aa raha hai!!!*
+
+(spots her ornaments)
+
+**Ram** - *Ek minute! Ye to tumhare bhabhi ke hain!*
+
+**Laxman** - *Aapko kaise pata ye bhabhi ke hain?*
+
+**Ram** - *Abbe yaar! Isi ka EMI bharte bharte to aaj main yahaan is haal mein aa gaya, lagta hai sita kissi muskil mei hai chalo usse khojte hai.*
+
+**Laxman** - *Paidal kahan tak jaoge, Uber kar lete hai.*
+
+**Taxiwalla** - *Main har ghante wait karne ke 40 Rs charge karta hoon!*
+
+**Laxman** - *Abbe teri....dhakkan! Ullu ke paththe! Dimaag ghaas charne gaya hai? Baaki Taxi waale 50 Rs maangte hain....tu sirf 40 maang raha hai?*
+
+**Taxiwalla** - *Bhaiya wo petrol gadi h, meri to CNG h.*
+
+### Getting down from taxi...
+
+**Garud** - *Tum Ram ho? Kya tum apni biwi ko dhoondh rahe ho?*
+
+**Ram** - *Haan magar aap....*
+
+**Garud** - *Tera baap!! jitna puchun bs utna bata.*
+
+**Ram** - *Sorry chaccha!!!*
+
+**Garud** - *Main us plane ka pilot hoon! Ab kambakht kalyug mein pet bharne ke liye mujhe ye bhi karna pada...
+Magar main to boodha garud hoon sahab! Kambakht Auto Pilot ka zamaana hai...Ravana ne mujhe dhakel diya aur plane ko le gaya!*
+
+**Ram** - *Magar woh le kahaan gaya hai?*
+
+**Garuda** - *Sri Lanka....waheen par Ravana ka rajya hai.
+Aapki biwi ne aapke liye ye goggles bhi chhoda hai...*
+
+Ram sees it 'fastrack...haan ye bhi Seeta ke special goggles hain.
+
+**Ram** - *I mean...chaccha.....ye Ravana rehte kahaan hain?*
+
+**Garud** - *Don't worry, uska visiting card mere paas hai....*
+
+### gives visiting card...
+
+**Laxman** - *Bhaiyya, humein jald se jald nikalna chahiye....*
+
+**Ram** - *Magar inka kya karein?*
+
+**Garud** - *Meri chinta mat karo...main apni girlfriend ko phone kar doonga.*
+
+**Ram** - *Chaccha, tumhari girlfriend kahaan rehti hai?*
+
+**Garud** - *Woh Lake Pulicat mein chutti mana rahi hai*
+
+**Laxman** - *Oh...phir to bahut der ho jayegi....hum Menaka Gandhi ko phone kar dete hain! Zyada jaldi aa jayengi*
+
+**Ram** - *Laxmana....tum woh sab intezam karo...main Taxi Driver se wahaan tak jaane ka kiraya baat kar leta hoon.*
+
+### They are driving in full speed...
+
+**Ram** - *Arre....ye kya.....bandar jaisa ek aadmi chala aa raha hai!*
+
+**Laxman** - *Gaur se dekho bhaiya, woh Andrew Symonds hai. Taxi wale bhaiyya! RUKO!*
+
+### They get down.
+
+**Ram** - *Hi! Tumhara naam kya hai?*
+
+**Hanuman** - *Mera naam **Pandit Gangadhar Vidhyadhar Mayadhar Omkarnath Shastri** hai. Maine bahut paap kiya hain...Indian Cricket Team ke khilaaf. God ne mujhe punish kiya ke jab tak main aapki seva naa karoon.....tab tak main century nahin bana paaoonga.*
+
+Ram, main aapki madad karoonga.
+
+**Laxman** - *Good....ab Lanka tak udo aur vaapas aao.*
+
+**Hanuman** - *Sorry....depression mein mujhe bulimia ho gaya....aur....main bahut khana kha kar mota ho gaya. Doctor ne mujhe udne se mana kiya hai.*
+
+**Laxman** - *Tumhari sehat ke liye?*
+
+**Hanuman** - *Nahi, mere co-passengers ki sehat ke liye.*
+
+Main aapke saath Taxi mein chalunga. Taxi ka bhaada main doonga.
+
+### They all get in the taxi and move on! They reach the port of Kanyakumari.
+
+**Ram** - *Laxman.....ab hum paar kaise karen?*
+
+**Laxman** - *Thoda intezaar karlo, har baat mei laxman laxman, kuch kaam khud bhi kar liya karo thakur.*
+
+**Ram** - *Arre....woh kya? Ek Ship aa raha hai?*
+
+**Laxman** - *Woh hamare liye hi aa rahen hain bhaiya, maine sri lanka mei malinga se baat kar liya h. Hum ussi mein Sri Lanka tak jaayenge.*
+
+**Ram** - *Par ticket?*
+
+**Laxman** - *Chinta mat karo bhaiya, maine aate hue, makemytrip.com se saara intezaam kar diye hai.*
+
+**Ram** - *Wah mere bhai Laxman! Main tujhe aashirvaad deta hoon, is baar tera US ka Visa zaroor pass ho jayega!*
+
+**Laxman** - *Thank you bhaiya.*
+
+**Ram** - *Ye kya!! Ship mein to saare bandar bhare hain!*
+
+**Laxman** - *Arre, phir gaur se dekho bhaiya....Indian team Sri Lanka ke daure ke liye nikal rahi hai. Usne bhi aapse kripa paane ke liye aapki seva mein utar aaye.*
+
+### The Judgement Day!!!
+
+**Ram** - Ravana, Ravana, Ravana! Courage hai toh bahar aa!
+
+**Ravana** - Hahahahahaha.... Dekh script thodi change hai. Let’s play Online Carrom. Jo jeeta wahi sikandar. What say?
+
+**Ram (After consulting everyone)** - *Chal done. But no cheating!*
+
+ The battle of game finally started. They both end up by lossing all there coins.
+
+ The war comes to a end.
+
+**Ram** - *You kidnapped my wife!*
+
+**Ravana** - *Sorry Ram! The idiot scriptwriter asked me to. But see the positive....we are finally meeting in person....and not in Orkut!*
+
+**Ram** - *I hope she is ok....*
+
+**Ravana** - *Absolutely!*
+
+Orders servant to get Sita.
+
+**Ram** - *Tum ho kaise??*
+
+**Ravana** - *Sorry....Hindi nahi.*
+
+**Ram** - *I said how are you?*
+
+**Ravana** - *Great...but feeling bad.....to a tone my sins....I offer a free holiday for everyone, sponsored by the Lanka tourism board.*
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
